# o2c-email-agent

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: emails.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/app/repositories/: classified_email_repository.py  outbound_email_repository.py  source_email_repository.py
backend/app/schemas/: email.py
backend/app/services/: email_processing.py  reply_actions.py
backend/app/services/analysis/: __init__.py  hybrid.py  models.py  normalization.py
backend/app/services/gmail/: __init__.py  client.py
backend/app/services/llm/: __init__.py  llm.py  prompts.py  providers.py  workflow_graph.py  workflow_nodes.py  workflow_state.py
backend/app/services/tools/: __init__.py  case_builder.py  invoice_matcher.py  reply_drafter.py
backend/tests/api/: test_emails_endpoints.py
backend/tests/integration/: test_email_ingestion_service.py
backend/tests/mocks/: __init__.py  mock_llm.py
backend/tests/unit/: test_tools.py  test_workflow_nodes.py
database/: init.sql
frontend/: Dockerfile  README.md  index.html  styles.css
frontend/js/: api.js  case_status.js  config.js  dashboard.js  dom.js  main.js  modal.js  utils.js
simulator/: Dockerfile  README.md  pyproject.toml
simulator/app/: main.py
(+13 files in other folders)
